--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.TrivialAPP_Base" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@drawable/images</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/hola</item>
     </style>
 </resources>
